--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </div>
             <div class="relative">
                 <div class="absolute inset-0 bg-gradient-to-r from-indigo-600/20 to-purple-600/20 rounded-2xl -rotate-6 blur-xl"></div>
-               <img src="c:\Users\bhuva\OneDrive\Desktop\rafiq\rq.jpeg" alt="A young man in an orange shirt" width="640" height="320">
+               <img src="rq.jpeg" alt="A young man in an orange shirt" width="640" height="320">
             </div>
         </div>
     </section>
@@ -439,4 +439,5 @@
         feather.replace();
     </script>
 </body>
+
 </html>
